--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 # Paramètres et clés secrètes #
 #=============================#
 
+# Mode simulateur (true pour test local, false en prod)
+USE_SIMULATOR=true
 
 # Paramètres serveur Flask
 FLASK_DEBUG=True
@@ -13,8 +15,16 @@ FLASK_SECRET_KEY=mon-secret-flask
 # Paramètres Fibaro Client.
 FIBARO_IP=192.168.1.33
 FIBARO_USER=admin
+
 FIBARO_PASSWORD=password
 FIBARO_PORT=80
+
+
+# Paramètres boutons
+device_id=12
+action_on=turnOn
+ection_off=turnOff
+
 
 # Paramètres fichier logs.
 LOG_FILE_PATH=logs/actions.log
