Commit avant 2eme rdv

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ FIBARO_PORT=80
 # Paramètres boutons
 device_id=12
 action_on=turnOn
-ection_off=turnOff
+action_off=turnOff
 
 
 # Paramètres fichier logs.
