Code test fibaro

--- a/services/device_mapping.json
+++ b/services/device_mapping.json
@@ -11,6 +11,7 @@
   "ipx_lumière_toilettes_étage": 10,
   "ipx_2": 15,
   "ipx_congelateur": 20,
+  "ipx_test": 27,
   "ipx_lumiere_chevet-rdc": 31,
   "ipx_lumière": 32
 }
